# arrow-nanoarrow

./: .asf.yaml  .clang-tidy  .env  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example  README.md  asv.conf.json  docker-compose.yml  docs.tgz  generated_dictionary.json  index.html  meson.build  meson.options  meson_options.txt  out.txt  switcher.json  valgrind.supp
.github/: dependabot.yml
dev/benchmarks/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  asv.conf.json  benchmark-report.qmd  benchmark-run-all.sh  generate-fixtures.py  generate_fixtures.py  meson.build
dev/benchmarks/apidoc/: Doxyfile
dev/benchmarks/c/: array_benchmark.cc  ipc_benchmark.cc  meson.build  schema_benchmark.cc  util.h
dev/benchmarks/fixtures/: many_columns.arrows
dev/benchmarks/python/: array.py  ipc.py  schema.py
examples/build_tests/: CMakeLists.txt  build.sh
examples/cmake-ipc/: CMakeLists.txt  README.md  invalid.arrows  schema-valid.arrows
examples/cmake-ipc/src/: app.c  library.c
examples/cmake-minimal/: CMakeLists.txt  README.md
examples/cmake-minimal/src/: app.c  library.c  library.h
examples/cmake-scenarios/: CMakeLists.txt  README.md  build.sh  run.sh
examples/cmake-scenarios/src/: app.cpp  library.c  library.cpp  library.h  library.hpp
examples/linesplitter/: CMakeLists.txt  linesplitter.cc  linesplitter.h  linesplitter_test.cc
examples/python-package/: .gitignore  README.md  meson.build  pyproject.toml
examples/python-package/src/nanoarrow_python_demo/: schema_printer.c
examples/python-package/subprojects/: nanoarrow.wrap
extensions/nanoarrow_device/: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example  README.md
extensions/nanoarrow_device/src/apidoc/: Doxyfile
extensions/nanoarrow_device/src/nanoarrow/: nanoarrow_device.c  nanoarrow_device.h  nanoarrow_device.hpp  nanoarrow_device_cuda.c  nanoarrow_device_cuda.h  nanoarrow_device_cuda_test.cc  nanoarrow_device_hpp_test.cc  nanoarrow_device_metal.cc  nanoarrow_device_metal_test.cc  nanoarrow_device_test.cc
extensions/nanoarrow_device/src/nanoarrow_device_metal/: metal_impl.cc  nanoarrow_device_metal.cc  nanoarrow_device_metal.h  nanoarrow_device_metal_test.cc
extensions/nanoarrow_ipc/: .gitignore  CMakeLists.txt  CMakePresets.json
extensions/nanoarrow_ipc/cmake/zlib/: CMakeLists.txt
extensions/nanoarrow_ipc/dev/: .gitignore  update_fbs.sh  update_vendored_flatcc.sh
extensions/nanoarrow_ipc/scripts/: test_integration_test_util.sh
extensions/nanoarrow_testing/: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example  nanoarrow_testing.hpp  nanoarrow_testing_test.cc
extensions/sqlite3/: CMakeLists.txt  CMakeUserPresets.json.example
extensions/sqlite3/src/: nanoarrow_sqlite3.c  nanoarrow_sqlite3.h  nanoarrow_sqlite3_test.cc
python/: .coverage  .coveragerc  .gitattributes  .gitignore  MANIFEST.in  README.ipynb  README.md  bootstrap.py  generate_dist.py  generate_type_stubs.sh  meson.build  pyproject.toml  set_dev_version.py  setup.py
python/nanoarrow/: __init__.py  _lib.pyx  lib.py
python/src/nanoarrow/: __init__.py  _array.pxd  _array.pyi  _array.pyx  _array_stream.pyi  _array_stream.pyx  _buffer.pxd  _buffer.pyi  _buffer.pyx  _device.pxd  _device.pyi  _device.pyx  _device_lib.pyx  _ipc_lib.pyi  _ipc_lib.pyx  _lib.pyi  _lib.pyx  _lib_utils.py  _repr_utils.py  _schema.pxd  _schema.pyi  _schema.pyx  _static_version.py  _types.pxd  _types.pyi  _types.pyx  _utils.pxd  _utils.pyi  _utils.pyx  _version.py  array.py  array_builder.py  array_stream.py  arrow_c.pxd  buffer.py  builder.py  c_array.py  c_array_stream.py  c_buffer.py  c_lib.py  (+18 more)
python/subprojects/: flatcc.wrap  nanoarrow.wrap
python/tests/: conftest.py  test_array.py  test_array_builder.py  test_array_stream.py  test_buffer.py  test_builder.py  test_c_array.html  test_c_array.py  test_c_array_stream.py  test_c_buffer.py  test_c_buffer_view.py  test_c_lib.py  test_c_schema.py  test_c_schema_view.py  test_canonical_extension.py  test_capsules.py  test_cython_lib.py  test_device.py  test_dlpack.py  test_extension.py  test_extension_canonical.py  test_ipc.py  test_iterator.py  test_nanoarrow.py  test_nanoarrow_device.py  test_numpy_iterator.py  test_schema.py  test_version.py  test_visitor.py
r/: NAMESPACE  (+14 more)
src/nanoarrow/: allocator.c  allocator_test.cc  array.c  array_benchmark.cc  array_inline.h  array_stream.c  array_stream_test.cc  array_test.cc  array_view.c  array_view_benchmark.cc  array_view_inline.h  array_view_test.cc  bitmap.c  bitmap_inline.h  bitmap_test.cc  buffer.c  buffer_inline.h  buffer_test.cc  build_id.h.in  error_test.cc  inline_array.h  inline_buffer.h  meson.build  metadata.c  metadata_test.cc  nanoarrow.c  nanoarrow.h  nanoarrow.hpp  nanoarrow_config.h.in  nanoarrow_device.c  nanoarrow_device.h  nanoarrow_device.hpp  nanoarrow_device_cuda.c  nanoarrow_device_cuda.h  nanoarrow_device_cuda_test.cc  nanoarrow_device_hpp_test.cc  nanoarrow_device_metal.cc  nanoarrow_device_metal.h  nanoarrow_device_metal_test.cc  nanoarrow_device_test.cc  (+21 more)
src/nanoarrow/common/: array.c  array_stream.c  array_test.cc  buffer_test.cc  inline_array.h  inline_buffer.h  inline_types.h  nanoarrow_hpp_test.cc  schema.c  schema_test.cc  utils.c  utils_test.cc
src/nanoarrow/device/: cuda.c  cuda_test.cc  device.c  device_hpp_test.cc  device_test.cc  metal.cc  metal_impl.cc  metal_impl.h  metal_test.cc
src/nanoarrow/hpp/: array_stream.hpp  array_stream_test.cc  buffer.hpp  buffer_test.cc  exception.hpp  exception_test.cc  operators.hpp  operators_test.cc  schema.hpp  unique.hpp  unique_test.cc  view.hpp  view_test.cc
src/nanoarrow/integration/: c_data_integration.cc  c_data_integration.h  c_data_integration_test.cc  ipc_integration.cc
src/nanoarrow/ipc/: codecs.c  codecs_test.cc  decoder.c  decoder_test.cc  encoder.c  encoder_test.cc  files_test.cc  flatcc_generated.h  ipc_hpp_test.cc  json_integration.cc  reader.c  reader_test.cc  writer.c  writer_test.cc
src/nanoarrow/testing/: testing.cc  testing_test.cc
(+846 files in other folders)
